# sd-leetcode-backend-mvp

./: .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  alembic.ini  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_seed_users.py
docs/: mvp-scope.md  system-design.md
judge/: __init__.py  runner.py  sandbox.py  worker.py
scripts/: seed.py
src/leetcode/: auth.py  config.py  database.py  main.py
src/leetcode/models/: __init__.py  problem.py  submission.py  test_case.py  user.py
src/leetcode/routers/: auth.py  leaderboard.py  problems.py  submissions.py
src/leetcode/schemas/: auth.py  leaderboard.py  problem.py  submission.py
src/leetcode/services/: auth_service.py  judge_service.py  leaderboard_service.py  problem_service.py  submission_service.py
tests/: conftest.py  test_health.py
tests/functional/: conftest.py  test_leaderboard.py  test_problems.py  test_submissions.py
tests/unit/: test_auth_service.py  test_problem_service.py  test_submission_service.py
verify/: manifest.env
verify/acceptance/: conftest.py  test_fr1_create_problem.py  test_fr2_list_problems.py  test_fr3_get_problem.py  test_fr4_submit_solution.py  test_fr5_get_verdict.py  test_fr6_judge_execution.py  test_fr7_submission_history.py  test_fr8_leaderboard.py
