[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode"
version = "0.1.0"
description = "LeetCode MVP — Online Code Judge Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "pyjwt>=2.9,<3.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "bcrypt>=4.2,<5.0",
    "redis>=5.2,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.28,<1.0",
    "psycopg2-binary>=2.9,<3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B008"]  # B008: Depends()/Query() in defaults is standard FastAPI pattern

[tool.ruff.lint.per-file-ignores]
"verify/acceptance/*" = ["B", "E501", "F841"]  # never edit acceptance cases
"tests/functional/*" = ["E501"]  # test assertions are clearer on one line
"tests/unit/*" = ["E501"]  # test assertions are clearer on one line
"alembic/versions/*" = ["I"]  # alembic migrations have specific import order
"scripts/*" = ["I"]  # seed script needs path setup before imports

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["leetcode*", "judge*"]
